added updates with webgazer and d3

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Future of Passwords</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="face-api.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script defer src="https://webgazer.cs.brown.edu/webgazer.js?"></script>
+    <!-- <script defer src="face-api.min.js"></script> -->
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    <video id="video" width="720" height="560" autoplay muted></video>
+    <div id="container"></div>
+    <!-- <video id="video" width="720" height="560" autoplay muted></video> -->
 </body>
 </html>
