--- a/middle.html
+++ b/middle.html
@@ -82,12 +82,14 @@
         </section>
         <section class="section s8">
             <div class="content">
-                <h1>Multifactor authentication with compounded biometric authentication?</h1>
-                <h2>Facial recognition + retina pattern tracking</h2>
+                <h1>Can we combine two forms of biometric authentication to make a more secure password?</h1>
+                <h2>Check out a demo using webgazer.js and d3 to simulate the android pattern lock with retina tracking</h2>
+                <p>Note: small calibrations may be necessary by looking (while clicking) at a few spots</p>
                 <br>
+                <br><br>
                 <div class="flex">
-                    <h3>Let's test it out</h3>
-                    <img id="rightArrow" src="assets/right-arrows.png">
+                    <h3>Let's test it out with the password: <span>369</span></h3>
+                    <img id="rightArrow" onclick="location.href = 'index.html';" src="assets/right-arrows.png">
                 </div>
             </div>
             
