changed webgazer script to async

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>The Future of Passwords</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://d3js.org/d3.v3.min.js"></script>
-    <script defer src="https://webgazer.cs.brown.edu/webgazer.js?"></script>
+    <script async src="https://webgazer.cs.brown.edu/webgazer.js?"></script>
     <!-- <script defer src="face-api.min.js"></script> -->
     <script defer src="js/script.js"></script>
 </head>
