updated with loading notice

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
+        <div id="options">
+            <button onclick="showVideo()">show camera</button>
+        </div>
+    </div>
     <!-- <video id="video" width="720" height="560" autoplay muted></video> -->
 </body>
 </html>
