--- a/middle.html
+++ b/middle.html
@@ -82,7 +82,7 @@
         </section>
         <section class="section s8">
             <div class="content">
-                <h1>Can we combine two forms of biometric authentication to make a more secure password?</h1>
+                <h1>Can we combine two forms of authentication to make a more secure password?</h1>
                 <h2>Check out a demo using webgazer.js and d3 to simulate the android pattern lock with retina tracking</h2>
                 <p>Note: small calibrations may be necessary by looking (while clicking) at a few spots</p>
                 <br>
